--- a/localisation/french/MD_focus_EU_USoE_l_french.yml
+++ b/localisation/french/MD_focus_EU_USoE_l_french.yml
@@ -1,16 +1,16 @@
 ﻿l_french:
- USoE001: "Constitute the new European Nation"
- USoE001_desc: "The unified European Union needs to constitute itself as a new nation. The Constitution and the Unification Treaties are one thing, but now the people need to fulfill that legal framework with life."
- USoE002: "A European Officer Corps"
- USoE002_desc: "In the Union, every member state had its own army and later there was the EuroArmy. We need to create a European Officer Corps with common doctrine and training."
- USoE003: "European Political Parties"
- USoE003_desc: "A new nation needs new political parties. The former political parties of the member states have to unify."
- USoE004: "European Patriotism"
- USoE004_desc: "A new nation needs its own patriotism and national symbols."
- USoE005: "The New Great Game"
- USoE005_desc: "The New Great Game has just begun and Europe is late, while the US, China and Russia already made their first moves."
- USoE006: "Europe's Heart and Soul"
- USoE006_desc: "The new nation needs to define its values and standards. Europe needs a Heart and Soul!"
+ USoE001: "Constituer la nouvelle nation européenne"
+ USoE001_desc: "L'union européenne unifiée doit se constituer en tant que nouvelle nation. La constitution et les traités d'unification sont une chose, mais maintenant le peuple doit donner vie à ce cadre juridique."
+ USoE002: "Un corps d'officiers européens"
+ USoE002_desc: "Dans l'union, chaque état membre avait sa propre armée et plus tard il y avait l'armée euro. Nous devons créer un corps d'officiers européens avec une doctrine et une formation communes."
+ USoE003: "Partis politiques européens"
+ USoE003_desc: "Une nouvelle nation a besoin de nouveaux partis politiques. Les anciens partis politiques des états membres doivent s'unifier."
+ USoE004: "Patriotisme européen"
+ USoE004_desc: "Une nouvelle nation a besoin de son propre patriotisme et de ses propres symboles nationaux."
+ USoE005: "Le nouveau grand jeu"
+ USoE005_desc: "Le nouveau grand jeu vient de commencer et l'Europe est en retard, alors que les États-Unis, la Chine et la Russie ont déjà fait leurs premiers pas."
+ USoE006: "Le cœur et l'âme de l'Europe"
+ USoE006_desc: "La nouvelle nation doit définir ses valeurs et ses normes. L'Europe a besoin d'un cœur et d'une âme !"
  USoE100: "A Game of Spheres"
  USoE100_desc: "When you play the game of spheres, you win or you die. There is no middle ground."
  USoE101: "Engage the Eagle"
