--- a/localisation/french/MD_focus_NKO_l_french.yml
+++ b/localisation/french/MD_focus_NKO_l_french.yml
@@ -405,29 +405,27 @@
  kim_jong_il_death.5.d: "This morning, Kim Jong-un has officially become the President of the State Affairs Commission and General Secretary of the Workers' Party of Korea. It is reported that his brother Kim Jong-nam has moved overseas."
  kim_jong_il_death.5.a: "What does this have to do with us?"
  kim_jong_il_death.5.b: "Expected."
- kim_jong_il_death.6.t: "The People's Army take a surprised coup in North Korea!"
- kim_jong_il_death.6.d: "In surprising news, a military coup by the KPA took place in North Korea this morning, with the new junta government announcing that it would take over power left vacant by the death of Kim Jong-il.The new Junta claimed that it was a coup d'état to preserve the purity of Juche's ideology at the \"strong request of the Korean state and nation\"."
+ kim_jong_il_death.6.t: "The People's Army Conduct a Surprise Coup in North Korea!"
+ kim_jong_il_death.6.d: "In surprising news, a military coup by the KPA took place in North Korea this morning, with the new junta government announcing that it would take over power left vacant by the death of Kim Jong-il. The new Junta claimed that it was a coup d'état to preserve the purity of Juche's ideology at the \"strong request of the Korean state and nation\"."
  kim_jong_il_death.6.a: "What does this have to do with us?"
  kim_jong_il_death.6.b: "Surprising news, does this represent the complete demise of the Kim dynasty?"
  kim_jong_il_death.6.c: "Oh God..."
  kim_jong_il_death.7.t: "Jang Song-thaek's Request"
- kim_jong_il_death.7.d: "Jang Song-thaek's visit to China to meet with [CHI.Getleader], hoping that China would intervene to help Kim Jong-nam gain power."
+ kim_jong_il_death.7.d: "Jang Song-thaek's visit to China to meet with [CHI.GetLeader], hoping that China would intervene to help Kim Jong-nam gain power."
  kim_jong_il_death.7.a: "Tell Kim Jong-un this information."
  kim_jong_il_death.7.b: "Do nothing. What does Kim Jong-un have to do with me?"
  NKO_united_front_department: "[Root.38th_parallel]"
  NKO_united_front_department_desc: "Since the end of the Second World War, Korea has been a divided nation. Ideological polarization and great power conflict have separated families and hindered the realization of the Korean people's full potential. In the South, while older generations still remember a united Korea and yearn for reunification, the memory of a united peninsula is gradually beginning to fade away.\n\n§YSupport for Reunification§!, together with South Korean §Yopinion§! of us and §YEmerging§! popularity in the South determines how much the South Korean people will be willing to concede in reunification negotiations. It decreases at a rate of 0.1% per month and is affected by decisions, focuses, and events. If or when reunification takes place, it will need to be kept high to ensure that the country stays together.\n\n[KOR.GetFlag] §YSupport for Reunification§!: [?KOR.SFR]%"
  NKO_close_kaesong_industrial_park: "Close Kaesong Industrial Park"
- NKO_close_kaesong_industrial_park_desc: "Our counterparts across the DMZ cannot be trusted. We should close down the Kaesong industrial park to prevent them from benefitting off of it."
+ NKO_close_kaesong_industrial_park_desc: "Our counterparts across the DMZ cannot be trusted. We should close down the Kaesong Industrial Park to prevent them from benefitting off of it."
  NKO_reopen_kaesong_industrial_park: "Reopen Kaesong Industrial Park"
- NKO_reopen_kaesong_industrial_park_desc: "We must show our compatriots that we are willing to pursue better relations. To that end, we should reopen access to Kaesong industrial park."
+ NKO_reopen_kaesong_industrial_park_desc: "We must show our compatriots that we are willing to pursue better relations. To that end, we should reopen access to Kaesong Industrial Park."
  NKO_restart_peace_talks: "Restart Peace Talks"
  NKO_restart_peace_talks_desc: "The South has rebuffed our peace offer, but that does not mean we cannot try again. However, we should first try to do what we can to prevent a repeat of the failure of the previous talks."
  NKO_Arduous_March: "The Arduous March"
  NKO_Arduous_March_desc: "§RThe North Korean famine§! was a period of mass starvation together with a general economic crisis from 1994 in North Korea, also known as the \"Arduous March\"."
  NKO_send_citizens: "Send Citizens to Countryside"
  NKO_send_KPA: "Send KPA to Countryside"
- NKO_international_assistance: "Accept International Humanitarian Aid"
- NKO_international_assistance_desc: "\"North Koreans welcome humanitarian aid from foreigners\"."
  NKO_end_of_arduous_march: "The End of Arduous March"
  NKO_end_of_arduous_march_desc: "Under the leadership of the Great Leader [NKO.GetLeader], we finally achieved a great victory against \"The Arduous March\"!"
  Kim_Jong_un_support: "Kim Jong-un: Lobbying the Top"
@@ -439,7 +437,7 @@
  The_gradual_loss_of_trust2_desc: "As Kim Jong-il aged, he became increasingly distrustful of Kim Jong-un..."
  The_gradual_loss_of_trust3: "The Gradual Loss of Trust"
  NKO_Power_struggle: "Power Struggle"
- NKO_Power_struggle_desc: "Sooner or later, the great leader of North Korea today, Comrade Kim Jong-il, will die and his successor will undoubtedly be one of his two sons, Kim Jong-nam and Kim Jong-un. But \"a country cannot have two masters\", and they both have to find ways to gain their father's trust.\nTipping the scales in favor of either side until an heir is identified will result in less stability.\n\nCurrently,\n§OKim Jong-un§!'s Orthodox: §Y[?ROOT.Kim_Jong_un]%§!\n§GKim Jong-nam§!'s Orthodox: §Y[?ROOT.Kim_Jong_Nam]%§!\n\n§YThe Chosen Successor by Kim Jong-il§!: [ROOT.GetChosenSuccessor]\n§RThe Most likely Current Successor§!: [ROOT.GetSuccessor]"
+ NKO_Power_struggle_desc: "Sooner or later, the great leader of North Korea today, Comrade Kim Jong-il, will die and his successor will undoubtedly be one of his two sons, Kim Jong-nam and Kim Jong-un. But \"a country cannot have two masters\", and they both have to find ways to gain their father's trust. Supporting one candidate over the other until a successor has been chosen will cause £stability_texticon §YStability§! to be lost.\n\nIf we do not have more £stability_texticon §YStability§! than 45% the Junta will look to seize power once Kim Jong-il has died.\n\nCurrent £stability_texticon §YStability§!: [?NKO.stability|1%]\n\nCurrently,\n§OKim Jong-un§!'s Orthodox: §Y[?ROOT.Kim_Jong_un]%§!\n§GKim Jong-nam§!'s Orthodox: §Y[?ROOT.Kim_Jong_Nam]%§!\n\n§YThe Chosen Successor by Kim Jong-il§!: [ROOT.GetChosenSuccessor]\n§RThe Most likely Current Successor§!: [ROOT.GetSuccessor]"
  Kim_Jong_Nam_Successor_tt: "Kim Jong-nam"
  Kim_Jong_un_Successor_tt: "Kim Jong-un"
  None_Successor_tt: "No Successor"
@@ -647,3 +645,5 @@
  NKO_economic_reforms: "Economic Reforms"
  NKO_hermit_kingdom: "Hermit Kingdom"
  NKO_hermit_kingdom_desc: "North Korea has been an isolated state ever since its creation. Despite being one of the poorest countries in the world, the country still manages to maintain one of the largest militaries in the world. The Kim family has been in power for more than 50 years with practically no internal opposition. The Hermit Kingdom of North Korea is an unexplainable anomaly among countries.\n\n§RThis idea will be removed if the Kim family is no longer in power!§!"
+ NKO_international_assistance: "Accept International Humanitarian Aid"
+ NKO_international_assistance_desc: "\"North Koreans welcome humanitarian aid from foreigners\"."
