--- a/localisation/french/MD_focus_SOV_l_french.yml
+++ b/localisation/french/MD_focus_SOV_l_french.yml
@@ -4644,3 +4644,4 @@
  SOV_subject_const_TT: "We will be able to §Grelease§! this §Yfederal subject§! as a puppet"
  SOV_western_russia: "New Wave in Old Style"
  SOV_western_russia_desc: "Current political realities have led to the fact that the past ruling party has again won the elections! However, the main difference from the previous term is the dominance of the reformist faction, whose goal is to reform the system so that it would not be ashamed to cooperate with democratic countries."
+ SOV_supportlnrdnr_rus_desc: "It's time to support the republics of Donbass!"
