--- a/localisation/french/MD_ideas_l_french.yml
+++ b/localisation/french/MD_ideas_l_french.yml
@@ -712,11 +712,9 @@
  pragmatism_focus: "Pragmatism Focus"
  pragmatism_focus_desc: "In a pragmatist world view, objects are valued based by their practicality. In politics, this is important and we can't do things in a certain way just because that's how we've always done them, or because that is expected of us."
  economic_autonomy: "Economic Autonomy"
- economic_autonomy_desc: "One of the biggest dangers to a country is to surrender our economy to a foreign power. Our people arent theirs to oppress, but ours."
+ economic_autonomy_desc: "One of the biggest dangers to a country is to surrender our economy to a foreign power. Our people are not theirs to oppress, but ours."
  flexible_diplomacy: "Flexible Diplomacy"
  flexible_diplomacy_desc: "Any country can be our ally or our enemy. We need to search for both high and low."
- trade_greek_and_trojans: "Trade with Greeks and Trojans"
- trade_greek_and_trojans_desc: "We need to cooperate with all countries of the world, regardless of their ideology. Shutting countries out because of different interests isn't a reason to forget them altogether."
  national_identity_focus: "National Identity Focus"
  national_identity_focus_desc: "The people of our country share a common history and ancestry. We need to emphasise, and if needed create, an idea that we are one, and not separated."
  ethnic_nationalism: "Ethnic Nationalism"
@@ -915,3 +913,9 @@
  protest_production_hard: "Major Protest Strikes"
  protest_production_hard_desc: "Majority of industry plants called for a strike as part of recent protests activity."
  full_control_of_hormuz_idea_TT: "Additional Income: $§G0.800§!"
+ idea_generic_reaching_to_the_global_market: "Reaching to the Global Market"
+ idea_generic_reaching_to_the_global_market_desc: "Reaching towards the global market and making our investments more cost-effective, and time-effective will only bring more profit to our nation."
+ idea_generic_the_manpower_solution: "The Manpower Solution"
+ idea_generic_the_manpower_solution_desc: "We can encourage more people into our workforce we can have all of the country's economic sectors improved."
+ idea_generic_worker_productivity: "Improved Per Capita Productivity"
+ idea_generic_worker_productivity_desc: "Our workers are extremely productive and due to recent improvement in technology we should continue to encourage this change and pivot in our nation."
