--- a/localisation/french/MD_internal_factions_l_french.yml
+++ b/localisation/french/MD_internal_factions_l_french.yml
@@ -248,7 +248,7 @@
  farmers: "The Farmers"
  farmers_desc: "In most developing countries, the farmers and their families are by far the largest group in the nation. Though holding no power individually, as a collective their needs and demands need to be considered carefully if stability is to be preserved."
  farmers_dynamic_modifier: "£pol_idea $farmers$"
- farmers_opinion_tt: "Opinion of §Y$farmers$§!: [FARM_opinion_display]\n\n§YEffects from opinion:§!\n$MODIFIER_CONSCRIPTION_FACTOR$: [?THIS.FARM_conscription_factor_var|+%]\n$MODIFIER_GLOBAL_MONTHLY_POPULATION$: [?THIS.FARM_monthly_pop_var|+%]\n$MODIFIER_CONSUMER_GOODS_FACTOR$: [?THIS.FARM_consumer_goods_factor_var|Y%]\n$agricolture_productivity_modifier$: [?THIS.FARM_productivity_modifier_var|+%]\n$agriculture_tax_modifier$: [?THIS.FARM_agriculture_income_modifier_var|+%]\n"
+ farmers_opinion_tt: "Opinion of §Y$farmers$§!: [FARM_opinion_display]\n\n§YEffects from opinion:§!\n$MODIFIER_CONSCRIPTION_FACTOR$: [?THIS.FARM_conscription_factor_var|+%]\n$MODIFIER_GLOBAL_MONTHLY_POPULATION$: [?THIS.FARM_monthly_pop_var|+%]\n$MODIFIER_CONSUMER_GOODS_FACTOR$: [?THIS.FARM_consumer_goods_factor_var|Y%]\n$agricolture_productivity_modifier$: [?THIS.FARM_productivity_modifier_var|+%]\n$agriculture_tax_modifier$: [?THIS.FARM_agriculture_income_modifier_var|+%]\n$agriculture_district_income_tax_modifier$: [?THIS.FARM_agriculture_income_modifier_var|+%]\n$modifier_production_speed_agriculture_district_factor$: [?THIS.FARM_production_speed_agricultural_district_factor_var|+%]\n"
  positive_farm_tt: "§G[?THIS.farmers_opinion|0]§!"
  negative_farm_tt: "§R[?THIS.farmers_opinion|0]§!"
  neutral_farm_tt: "§Y[?THIS.farmers_opinion|0]§!"
@@ -414,3 +414,8 @@
  IRQ_the_military: "[IRQ.GetAdjective] Armed Forces"
  IRQ_intelligence_community: "Mukhabarat"
  IRQ_labour_unions: "General Federation of Trade Unions"
+ reduce_taxes_farmer_mission_tt: "Our §YCorporate Tax Rate§! is Below [?reduction_target_farmers_tax_rate|Y0]% (Current: [?corporate_tax_rate|0Y]%)\n"
+ reduce_taxes_farmer_mission: "The Farmers Demanded Reduced Taxes"
+ reduce_taxes_farmer_mission_desc: "The Farmers need additional money due to recent poor sales and the rising inflation within the economy. They've asked us to decrease our §YCorporate Tax Rate§! by §G5%§! to help with this campaign."
+ agricultural_district_tax_credits_decision: "§YCommercialized Agriculture Districts§! Tax Credits"
+ agricultural_district_tax_credits_decision_desc: "We can issue a series of small tax credits to help assuage the Farmers economic issues but at the cost of reduced income for the next few months. How should we proceed?"
