--- a/localisation/french/MD_missiles_gui_l_french.yml
+++ b/localisation/french/MD_missiles_gui_l_french.yml
@@ -792,7 +792,7 @@
  TARGET_SAT_TT: "[?ROOT.sat_target_TAG_array^i.GetFlag]£GFX_sat_amount_texticon  [?ROOT.sat_target_array^i] [target_sat_type_name_loc]"
  TARGET_SAT_ID_loc_key: "[?temp_target_TAG.ROOT]"
  SPY_MISSIONS: "[ROOT.GetFlag] £GFX_spy_texticon §YMissions§!\n£GFX_SPY_satellite_texticon  [?var_SPY_mission_num_available|C0]/[?var_SPY_mission_num_total|C0]\n£GFX_SPY_satellite_texticon  §gin £GFX_spy_texticon missions:§! [?var_SPY_mission_active_sat|C0]\n"
- SPY_MISSIONS_TT: "£GFX_SPY_satellite_texticon  §Gavailable§!/§Ytotal§!"
+ SPY_MISSIONS_TT: "£GFX_SPY_satellite_texticon  §Gdisponible§!/§Ytotal§!"
  SPY_MISSION_START_BUTTON: "[?var_SPY_mission_num_gui]x £GFX_SPY_satellite_texticon £GFX_spy_texticon Mission [?orbit_selected_TAG.GetFlag]"
  SPY_MISSION_START_BUTTON_TT: "[!spy_mission_start_button_click_enabled]\n§Y[ROOT.GetNameWithFlag]§! gains intel over §Y[?orbit_selected_TAG.GetNameWithFlag]§!:\n§gCivilian Intelligence§!: §C[?ROOT.var_SPY_mission_intel_add]%§!\n§gArmy Intelligence§!: §C[?ROOT.var_SPY_mission_intel_add]%§!\n§gNavy Intelligence§!: §C[?ROOT.var_SPY_mission_intel_add]%§!\n§gAir Intelligence§!: §C[?ROOT.var_SPY_mission_intel_add]%§!"
  spy_mission_start_button_trigger_1_TT: "§Y[ROOT.GetNameWithFlag]§! has §gNOT§! an active Spy Mission on §Y[?orbit_selected_TAG.GetNameWithFlag]§!"
