--- a/localisation/simp_chinese/MD_focus_SER_VOJ_MNT_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SER_VOJ_MNT_l_simp_chinese.yml
@@ -394,10 +394,6 @@
  SER_rus_infra_desc: "恢复基础设施是恢复经济的主要计划之一。我们将邀请俄罗斯合作伙伴参加。"
  SER_italian_business: "意大利银行投资"
  SER_italian_business_desc: "意大利银行看到了增长和发展的前景，准备投资我们的经济。"
- SER_german_factories: "德国投资"
- SER_german_factories_desc: "许多德国大公司已准备好投资我们的经济。"
- SER_usa_factories: "美国投资"
- SER_usa_factories_desc: "许多美国大公司已准备好投资我们的经济。"
  SER_metalls_china: "投资冶金工业"
  SER_metalls_china_desc: "中国投资者看到了我们金属行业巨大的增长潜力，准备投资我们的金属行业。"
  SER_china_infra: "与中国的基础设施协议"
@@ -2026,3 +2022,7 @@
  Serbia.27.t: "巴尔干联邦"
  Serbia.27.d: "我们已正式成为巴尔干联邦的成员。"
  Serbia.27.a: "很好"
+ SER_german_baseies: "德国投资"
+ SER_german_baseies_desc: "许多德国大公司已准备好投资我们的经济。"
+ SER_usa_baseies: "美国投资"
+ SER_usa_baseies_desc: "许多美国大公司已准备好投资我们的经济。"
