--- a/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
@@ -1956,7 +1956,7 @@
  BSH_volga_ssr_annex_desc: "我们将与伏尔加河地区人民一起，在前俄罗斯领土上建立最强大的国家。"
  TAT_agro_export: "与§Y[TAT.GetNamewithFlag]§!合作"
  subject_rus.51.t: "[TAT.GetNameWithFlag]向我们提供合作协议"
- subject_rus.51.d: "[TAT.GetNameWithFlag]提议我们与他们的农业工业综合体签订一项涉及合作的贸易协定。我们会同意吗？"
+ subject_rus.51.d: "[TAT.GetNameWithFlag]提议我们与他们的农业工业复合体签订一项涉及合作的贸易协定。我们会同意吗？"
  subject_rus.51.a: "不错的提议"
  subject_rus.51.b: "不"
  subject_rus.52.t: "[FROM.GetNameWithFlag]已经同意合作"
@@ -1966,7 +1966,7 @@
  subject_rus.53.d: "[FROM.GetNameWithFlag]拒绝与我们签订农业产业合作合同"
  subject_rus.53.a: "悲哀"
  subject_rus.54.t: "[BSH.GetNameWithFlag]向我们提供合作协议"
- subject_rus.54.d: "[BSH.GetNameWithFlag]提议我们与他们的农业工业综合体签订一项涉及合作的贸易协定。我们会同意吗？ "
+ subject_rus.54.d: "[BSH.GetNameWithFlag]提议我们与他们的农业工业复合体签订一项涉及合作的贸易协定。我们会同意吗？ "
  subject_rus.54.a: "不错的提议"
  subject_rus.54.b: "不"
  subject_rus.55.t: "[FROM.GetNameWithFlag]已经同意合作"
@@ -2005,7 +2005,7 @@
  KHM_world_chi: "伙伴关系：[CHI.GetNameWithFlag]"
  KHM_world_uzbek: "伙伴关系：[CHI.GetNameWithFlag]"
  subject_rus.57.t: "[KHM.GetNameWithFlag]向我们提供合作协议"
- subject_rus.57.d: "[KHM.GetNameWithFlag]要求我们与他们的石油和天然气工业联合体缔结一项涉及合作的贸易协定。我们会同意吗？"
+ subject_rus.57.d: "[KHM.GetNameWithFlag]要求我们与他们的石油和天然气工业复合体缔结一项涉及合作的贸易协定。我们会同意吗？"
  subject_rus.57.a: "不错的提议"
  subject_rus.57.b: "不"
  subject_rus.58.t: "[FROM.GetNameWithFlag]已经同意合作"
