--- a/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
@@ -638,8 +638,6 @@
  economic_autonomy_desc: "对一个国家来说，最大的危险之一是将我们的经济交给外国势力。我们的人民是我们的，而不是他们可以压迫的。"
  flexible_diplomacy: "灵活外交"
  flexible_diplomacy_desc: "任何国家都可以成为我们的盟友或敌人。我们需要同时搜索高点和低点。"
- trade_greek_and_trojans: "与希腊人和特洛伊木马进行交易"
- trade_greek_and_trojans_desc: "我们需要与世界各国合作，无论其意识形态如何。因为不同的利益而将国家拒之门外并不是完全忘记它们的理由。"
  national_identity_focus: "注重民族认同"
  national_identity_focus_desc: "我国人民有着共同的历史和祖先。如果我们需要强调的话，创造一种想法，即我们合而为一。"
  ethnic_nationalism: "种族民族主义"
@@ -915,3 +913,9 @@
  VIE_VPA_Business_Ventures: "越南人民军经商"
  VIE_VPA_Business_Ventures_desc: "在20世纪60、70年代，越南军队就有经营活动，主要是从中国和苏联进口生意。1990年两山战役后，中国和越南完全停止边境战事，因此越南削减军事开支，最低限度压缩经费。在90年代，越南军队的军费大幅度下跌，而越南仿照中国的军队经商，让军队开展经营商业活动，用赚来的钱偿还债务和改善军队装备与福利。"
  full_control_of_hormuz_idea_TT: "额外收入：$§G0.800§!"
+ idea_generic_reaching_to_the_global_market: "走向全球市场"
+ idea_generic_reaching_to_the_global_market_desc: "走向全球市场并使我们的投资更具成本效益和时效性只会为我们的国家带来更多利润。"
+ idea_generic_the_manpower_solution: "人力解决方案"
+ idea_generic_the_manpower_solution_desc: "我们可以鼓励更多的人加入劳动力大军，从而改善国家的所有经济部门。"
+ idea_generic_worker_productivity: "提高人均生产率"
+ idea_generic_worker_productivity_desc: "我们的工人生产率极高，而且由于近年来技术的进步，我们应该继续鼓励这种变革，并在我们国家实现转变。"
