--- a/localisation/simp_chinese/replace/replaced_from_vanilla_buildings_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_buildings_l_simp_chinese.yml
@@ -1,7 +1,7 @@
 ﻿l_simp_chinese:
  industrial_complex: "民用工业"
  industrial_complex_plural: "民用工厂"
- industrial_complex_desc: "此建筑可为所属地区提供生产民用商品或建造新建筑的工业能力，或可因需转换为军用工厂。\n\n为所属地区提供：\n所需工人基础数量：§Y360K§!\n每个§Y民用工厂§!的基本GDP产出：$§Y20B§!\n基础能源消耗：§R-0.4§! GW"
+ industrial_complex_desc: "此建筑可为所属地区提供生产民用商品或建造新建筑的工业能力，或可因需转换为军用工厂。\n\n为所属地区提供：\n所需工人基础数量：§Y360K§!\n每个§Y民用工厂§!的基本GDP产出：$§Y20B§!\n基础能源消耗：§R-0.4§! GW\n"
  arms_factory: "军事工业"
  arms_factory_plural: "军用工厂"
  arms_factory_desc: "此建筑可为所属地区提供生产军事装备的工业能力，或可因需转换为民用工厂。\n\n为所属地区提供：\n所需工人基础数量：§Y25K§!\n每个§Y军用工厂§!的基本GDP产出：$§Y1B§!\n基础能源消耗：§R-0.4§! GW"
@@ -47,7 +47,7 @@
  fuel_silo_desc: "此建筑可为你的国家储存更多的§H燃油§!。"
  offices: "办公园区"
  offices_plural: "办公园区"
- offices_desc: "办公园区代表了除采掘业和重工业以外的所有其他经济行业。这些包括金融、服务、信息技术、零售等。\n\n为所属地区提供：\n所需工人基础数量：§Y630K§!\n每个§Y办公园区§!的基本GDP产出：$§Y50B§!\n基础能源消耗：§R-0.2§! GW"
+ offices_desc: "§Y办公园区§!代表了除采掘业和重工业以外的所有其他经济行业。这些包括金融、服务、信息技术、零售等。\n\n为所属地区提供：\n所需工人基础数量：§Y630K§!\n每个§Y办公园区§!的基本GDP产出：$§Y50B§!\n基础能源消耗：§R-0.25§! GW"
  naval_base: "海军基地"
  naval_base_plural: "海军基地"
  naval_base_desc: "扩大舰队的范围并为其提供维修服务。允许海外供应和出口资源。较高的水平会增加供应吞吐量。"
@@ -63,7 +63,11 @@
  rail_way_desc: "铁路用来连接补给中心，使补给能够从你的首都运输。"
  fossil_powerplant: "化石燃料发电厂"
  fossil_powerplant_plural: "化石燃料发电厂"
- fossil_powerplant_desc: "化石燃料发电厂是所有基于化石的热电能源的总称。 这些包括但不限于； 煤炭、天然气和石油。§Y化石燃料发电厂§!如果发电量高于消耗量，则将闲置。\n\n为该省提供：\n基础能源获取：§G+1§! GW\n"
+ fossil_powerplant_desc: "§Y化石燃料发电厂§!是所有基于化石的热电能源的总称。 这些包括但不限于； 煤炭、天然气和石油。§Y化石燃料发电厂§!如果发电量高于消耗量，则将闲置。\n\n为该省提供：\n基础能源获取：§G+1§! GW\n"
  fossil_powerplant_amount: "$VALUE|Y0=$"
  fossil_powerplant_resource: "£resources_strip|$FRAME$"
  rail_way_plural: "铁路"
+ agriculture_district: "商业化农业区"
+ agriculture_district_plural: "商业化农业区"
+ agriculture_district_desc: "§Y商业化农业区§!是我国所有非自给性农业的总称。它包括农业工业、耕地、粮仓、屠宰场等。\n\n为所属地区提供：\n所需工人基础数量：§Y200K§!\n每个§Y商业化农业区§!的基本GDP产出：$§Y25B§!\n基础能源消耗：§R-0.10§! GW\n地区§Y燃料获取§!：10\n§Y当地补给能力§!：1.5%\n"
+ agriculture_district_amount: "$VALUE|Y0=$"
