--- a/localisation/french/MD_dynamic_scripting_l_french.yml
+++ b/localisation/french/MD_dynamic_scripting_l_french.yml
@@ -6,7 +6,7 @@
  script.0.maybe_pos_rating: "May §GIncrease§! §YApproval Ratting§! "
  script.0.result: "§YOfficial results§!: "
  script.0.opinion: "opinion "
- script.0.government: "government "
+ script.0.government: "gouvernement "
  script.0.increase: "§GIncrease§! "
  script.0.decrease: "§RDecrease§! "
  script.0.hostile: "§RHostile§! "
