--- a/localisation/french/MD_focus_GENERIC_l_french.yml
+++ b/localisation/french/MD_focus_GENERIC_l_french.yml
@@ -197,3 +197,17 @@
  GENERIC_develop_armor_prototypes_desc: ""
  GENERIC_countermeasures_against_armored_units: "Contre-mesures contre les unités blindées"
  GENERIC_countermeasures_against_armored_units_desc: ""
+ GENERIC_productivity_measures: "Productivity Measures"
+ GENERIC_productivity_measures_desc: ""
+ GENERIC_improved_worker_productivity: "Improve Worker Productivity"
+ GENERIC_improved_worker_productivity_desc: ""
+ GENERIC_the_manpower_solution: "The Manpower Solution"
+ GENERIC_the_manpower_solution_desc: ""
+ GENERIC_emphasize_autarkic_measures: "Emphasize Further Autarkic Measures"
+ GENERIC_emphasize_autarkic_measures_desc: ""
+ GENERIC_reaching_to_the_global_market: "Reaching to the Global Market"
+ GENERIC_reaching_to_the_global_market_desc: ""
+ GENERIC_agricultural_district_subsidization: "Agricultural District Subsidization"
+ GENERIC_agricultural_district_subsidization_desc: ""
+ GENERIC_nuclear_energy_expansions: "Nuclear Energy Expansion"
+ GENERIC_nuclear_energy_expansions_desc: ""
