--- a/localisation/french/events_l_french.yml
+++ b/localisation/french/events_l_french.yml
@@ -1,9 +1,9 @@
 ﻿l_french:
- TT_CURRENT_LEADER_DIES: "§R[ROOT.GetLeader] dies!§!"
- md4.1.t: "[From.GetName]-[Root.GetName] Free Trade Agreement"
- md4.1.d: "[From.GetNameDef] is offering us a free trade agreement. We will have priority to export to and import from them."
- md4.1.a: "Sign it!"
- md4.1.b: "Refuse."
+ TT_CURRENT_LEADER_DIES: "§R[ROOT.GetLeader] est mort!§!"
+ md4.1.t: "Accord de libre-échange [From.GetName]-[Root.GetName]"
+ md4.1.d: "[From.GetNameDef] nous propose un accord de libre-échange. Nous aurons la priorité pour exporter vers eux et importer d'eux."
+ md4.1.a: "Signons-le!"
+ md4.1.b: "Refuser."
  md4.2.t: "[From.GetNameDef] Has Signed a Free Trade Agreement with Us"
  md4.2.d: "[From.GetNameDef] has accepted our offer to sign a free trade agreement. It will enter into force immediately."
  md4.2.a: "It will make both of us prosperous!"
@@ -12,8 +12,8 @@
  md4.3.a: "They fear our superior products!"
  md4.4.t: "[From.GetName]-[Root.GetName] Military Cooperation Treaty"
  md4.4.d: "[From.GetNameDef] is offering us a military cooperation treaty. We will sell them equipment at a discounted price but this will make them more likely of buying from us instead of buying from our competitors."
- md4.4.a: "Sign it!"
- md4.4.b: "Refuse."
+ md4.4.a: "Signons-le!"
+ md4.4.b: "Refuser."
  md4.5.t: "[From.GetNameDef] Has Signed a Military Cooperation Treaty with Us"
  md4.5.d: "[From.GetNameDef] has accepted our offer to sign a military cooperation treaty. It will enter into force immediately."
  md4.5.a: "It will make both of us strong!"
