--- a/localisation/french/replace/replaced_from_vanilla_buildings_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_buildings_l_french.yml
@@ -1,7 +1,7 @@
 ﻿l_french:
  industrial_complex: "Industrie civile"
  industrial_complex_plural: "Industries civiles"
- industrial_complex_desc: "Ce bâtiment fournit à l'État une industrie pour la production de biens civils ou la construction de nouveaux bâtiments. Peut être converti en industrie militaire si nécessaire.\n\nFournit à l'État:\nNombre de base de travailleurs requis: §Y360K§!\nPIB de base par §YIndustrie Civile§!: §Y20$ Milliards§!\nConsommation d'énergie de base: §R-0.4§! GW"
+ industrial_complex_desc: "This building provides the state with industry for production of civilian goods or construction of new buildings. Can be converted to military industry if needed.\n\nProvides the state with:\nBase Number of Required Workers: §Y360K§!\nBase GDP Output per §YCivilian Industry§!: $§Y20 Billion§!\nBase Energy Consumption: §R-0.4§! GW\n"
  arms_factory: "Industrie militaire"
  arms_factory_plural: "Industries militaires"
  arms_factory_desc: "Ce bâtiment fournit à l'État une industrie pour la production de nouveaux équipements militaires. Peut être converti en industrie civile si nécessaire.\n\nFournit à l'État:\nNombre de base de travailleurs requis: §Y25K§!\nPIB de base par §YIndustrie Militaire§!: $§Y1 Milliard§!\nConsommation d'énergie de base: §R-0.4§! GW"
@@ -47,7 +47,7 @@
  fuel_silo_desc: "Ce bâtiment apporte à votre pays plus d'espace pour stocker du §Hpétrole§!."
  offices: "Industrie de services"
  offices_plural: "Industries de services"
- offices_desc: "L'industrie de services représente toutes les industries de l'économie autres que l'extraction et l'industrie lourde. Cela inclut les services financiers, clients, technologiques, informatiques, commerciaux et bien plus.\n\nFournit à l'État:\nNombre de base de travailleurs requis: §Y630K§!\nProduction de base du PIB par §YIndustries de services§!: §Y50$ milliards§!\nConsommation d'énergie de base: §R-0.2§! GW"
+ offices_desc: "The §YOffice Sectors§! represents all the other industries of the economy beyond the extraction and heavy industries. These includes financial, customer, information technology, retail services and so much more.\n\nProvides the state with:\nBase Number of Required Workers: §Y630K§!\nBase GDP Output per §YOffice Sector§!: $§Y50 Billion§!\nBase Energy Consumption: §R-0.25§! GW"
  naval_base: "Base navale"
  naval_base_plural: "Bases navale"
  naval_base_desc: "Elles étendent la portée de votre flotte et fournissent des réparations à celle-ci. Elles permettent l'approvisionnement outre-mer et l'exportation de ressources. Plus le niveau est élevé, plus la capacité d'approvisionnement augmente."
@@ -64,6 +64,10 @@
  rail_way_desc: "Les chemins de fer sont utilisés pour relier les centres logistiques entre eux afin de permettre une extraction d'approvisionnement loin de votre capitale."
  fossil_powerplant: "Centrale électrique à combustible fossile"
  fossil_powerplant_plural: "Centrales électriques à combustibles fossiles"
- fossil_powerplant_desc: "La centrale à combustible fossile est un fourre-tout pour toutes les sources d'énergie thermoélectrique fossiles. Ceux-ci incluent, sans toutefois s'y limiter: charbon, gaz naturel et pétrole. §YCentrales à combustibles fossiles§! fonctionnera au ralenti si la production d'énergie est supérieure à la consommation.\n\nFournit à l'État:\nGain de puissance de base: §G+1§! GW\n"
+ fossil_powerplant_desc: "§YFossil Fuel Powerplants§! is a catch-all for all fossil based thermoelectric energy sources. These include but are not limited to; coal, natural gas and oil. §YFossil Fuel Powerplants§! will idle if energy generation is higher then consumption.\n\nProvides the state with:\nBase Power Gain: §G+1§! GW\n"
  fossil_powerplant_amount: "$VALUE|Y0=$"
  fossil_powerplant_resource: "£resources_strip|$FRAME$"
+ agriculture_district: "Commercialized Agriculture District"
+ agriculture_district_plural: "Commercialized Agriculture Districts"
+ agriculture_district_desc: "§YCommercialized Agriculture Districts§! represents a catch-all for all non-subsistence Agriculture within our nation. It includes Agro-Industry, arable land, grain silos, butcherhouses and more.\n\nProvides the state with:\nBase Number of Required Workers: §Y200K§!\nBase GDP Output per §YCommercialized Agriculture District§!: $§Y25 Billion§!\nBase Energy Consumption: §R-0.10§! GW\n§YFuel Gain§! from States: 10\n§YLocal Supplies§!: 1.5%\n"
+ agriculture_district_amount: "$VALUE|Y0=$"
