--- a/localisation/simp_chinese/MD_AC_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_AC_l_simp_chinese.yml
@@ -95,7 +95,7 @@
  AC_project_14_decision_desc: "[AC_GetProjectDesc14]"
  AC_project_14_target_decision: "§Y[From.AC_GetConstructionTypeProject14]§! x [From.AC_GetProject14Amount]在[From.AC_GetProjectState14]"
  AC_project_14_target_decision_desc: "\n国家：[From.GetName]\n建设队列：[From.AC_GetProject14Amount]\n\n选择此决议将取消建设项目。\n\n右键单击以查看目标地区。\n项目ID：14"
- AC_construction_CIC: "§Y民用工厂§!\n此建筑可为所属地区提供生产民用商品或建造新建筑的工业能力，可因需转换为军用工厂。\n\n§Y每个建筑的花费：§!§R$[?global.BUILD_COST_CIVILIAN_FACTORY]§!B"
+ AC_construction_CIC: "§Y民用工厂§!\n此建筑可为所属地区提供生产民用商品或建造新建筑的工业能力，可因需转换为军用工厂。\n\n§Y每个建筑的基础花费：§!§R$[?global.BUILD_COST_CIVILIAN_FACTORY]§!B"
  AC_construction_CIC_delayed: "§Y前提条件§!：\n[!AC_building_cic_button_click_enabled]"
  AC_construction_MIC: "§Y军用工厂§!\n此建筑可为所属地区提供生产军事装备的工业能力，可因需转换为民用工厂。\n\n§Y每个建筑的基础花费：§!§R$[?global.BUILD_COST_MILITARY_FACTORY]§!B"
  AC_construction_MIC_delayed: "§Y前提条件§!：\n[!AC_building_mic_button_click_enabled]"
@@ -156,9 +156,9 @@
  AC_event.3.o1: "我知道了"
  AC_cancel_investment_tt: "取消来自[From.GetName]的以下投资："
  AC_build_cost_tt: "§Y外国投资成本§!\n\n§Y外国投资成本§!§g是我们正在考虑启动的项目的前期成本。§g当项目验收后§!，它直接从我们的国库中取出并添加到我们的§!§Y国际投资§!\n\n§g如果您只是从其他国家或州单击，请确保您更新了建筑数量或单击另一座建筑以更新提示以查看真实成本。§!\n\n§g腐败、国家观念等都会影响投资项目的成本。投资国的腐败将增加项目的成本，基于他们的腐败水平。§!\n"
- AC_build_cost_tt_delayed: "修正：\n§Y[Prev.Controller.GetNamewithFlag]的投资成本：§![?ROOT.displayable_monetary_cost_modifier|%0-]\n"
- AC_clock_tt: "§Y投资完成时间：§![?ROOT.project_total_construction_duration_display^-1]日后\n\n§Y投资完成时间§!§g或项目的持续时间只是完成我们在[PREV.GetName]提议的项目所需时间的总和。你向§Y[Prev.Controller.GetNamewithFlag]§!提供的建筑数目越多，完成时间就越长。§!\n\n§g如果你刚从另一个国家或省份点击，请确保你更新建筑数目或点击另一个建筑来更新工具提示，以看到真实成本。§!\n"
- AC_clock_tt_delayed: "修正：\n[AC_GetInfrastructure]\n§Y在[Prev.Controller.GetNamewithFlag]的投资修正：§![?ROOT.displayable_construction_modifier|%]\n"
+ AC_build_cost_tt_delayed: "修正：\n§Y[PREV.CONTROLLER.GetNamewithFlag]的投资成本：§![?ROOT.displayable_monetary_cost_modifier|%0-]\n"
+ AC_clock_tt: "§Y投资完成时间：§![?ROOT.project_total_construction_duration_display^-1]日后\n\n§Y投资完成时间§!§g或项目的持续时间只是完成我们在[PREV.GetName]提议的项目所需时间的总和。你向§Y[PREV.CONTROLLER.GetNamewithFlag]§!提供的建筑数目越多，完成时间就越长。§!\n\n§g如果你刚从另一个国家或省份点击，请确保你更新建筑数目或点击另一个建筑来更新工具提示，以看到真实成本。§!\n"
+ AC_clock_tt_delayed: "修正：\n[AC_GetInfrastructure]\n§Y在[PREV.CONTROLLER.GetNamewithFlag]的投资修正：§![?ROOT.displayable_construction_modifier|%]\n"
  AC_page_up: "下一页"
  AC_ITA_wasted_foreign_funds_time: "小心，§Y黑手党渗透投资项目§!将导致施工时间延长，最多§R+200%§!\n"
  AC_ITA_wasted_foreign_funds: "小心，§Y黑手党渗透投资项目§!将导致花费增加，最多§R+200%§!\n"
@@ -173,5 +173,7 @@
  AC_construction_POWER_PLANT: "§Y化石燃料发电厂§!\n化石燃料发电厂是所有基于化石燃料的热电能源的总称。这些包括但不限于； 煤炭、天然气和石油。\n\n§Y每个建筑的花费：§!§R$[?global.BUILD_COST_FOSSIL_POWERPLANT]§!B"
  AC_construction_POWER_PLANT_delayed: "§Y先决条件§!：\n[!AC_building_power_plant_button_click_enabled]"
  int_auto_reject_investment_flag_tt: "§Y[PREV.CONTROLLER.GetNameWithFlag]§!目前不会自动拒绝提议"
- AC_construction_NUCLEAR_REACTOR: "§Y核反应堆§!\n核反应堆建筑将核能转化为电能，在此过程中消耗中浓缩铀。\n\n§Y建筑的基本消耗：§!§R$[?global.BUILD_COST_NUCLEAR_REACTOR]§!B"
+ AC_construction_NUCLEAR_REACTOR: "§Y核反应堆§!\n核反应堆建筑将核能转化为电能，在此过程中消耗中浓缩铀。\n\n§Y每个建筑的基础花费：§!§R$[?global.BUILD_COST_NUCLEAR_REACTOR]§!B"
  AC_construction_NUCLEAR_REACTOR_delayed: "§Y先决条件§!：\n[!AC_building_nuclear_reactor_button_click_enabled]"
+ AC_construction_AGRICULTURE_DISTRICT: "§Y商业化农业区§!\n§Y商业化农业区§!代表我国境内所有非自给性农业的总称。它包括农业工业、耕地、粮仓、屠宰场等。\n\n§Y每个建筑的基础花费：§!§R$[?global.BUILD_COST_AGRICULTURE_DISTRICT]§!B"
+ AC_construction_AGRICULTURE_DISTRICT_delayed: "§Y先决条件§!：\n[!AC_building_agriculture_district_button_click_enabled]"
