--- a/localisation/simp_chinese/MD_focus_GENERIC_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GENERIC_l_simp_chinese.yml
@@ -197,3 +197,17 @@
  GENERIC_unemployment_program_desc: "可能会采取仓促措施，以确保我们能够在国家开始遭受苦难之前取消更高的失业门槛。 它们的实施也可能是为了人民的利益而修改我们的福利和医疗保健预算的一种方式。"
  GENERIC_debt_refactoring: "重组债务"
  GENERIC_debt_refactoring_desc: "为了改善生活和提高政府效率而谈判我们的贷款从来不是一件坏事。"
+ GENERIC_productivity_measures: "生产率衡量指标"
+ GENERIC_productivity_measures_desc: ""
+ GENERIC_improved_worker_productivity: "改善工人生产率"
+ GENERIC_improved_worker_productivity_desc: ""
+ GENERIC_the_manpower_solution: "人力解决方案"
+ GENERIC_the_manpower_solution_desc: ""
+ GENERIC_emphasize_autarkic_measures: "强调进一步自给自足措施"
+ GENERIC_emphasize_autarkic_measures_desc: ""
+ GENERIC_reaching_to_the_global_market: "进军全球市场"
+ GENERIC_reaching_to_the_global_market_desc: ""
+ GENERIC_agricultural_district_subsidization: "农业区补贴"
+ GENERIC_agricultural_district_subsidization_desc: ""
+ GENERIC_nuclear_energy_expansions: "核能扩张"
+ GENERIC_nuclear_energy_expansions_desc: ""
