--- a/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
@@ -2017,7 +2017,7 @@
  energy_gain: "电力"
  energy_gain_multiplier: "发电量乘数"
  energy_use: "能源使用"
- energy_use_multiplier: "能源使用乘数"
+ energy_use_multiplier: "所有来源能源使用乘数"
  pop_energy_use_multiplier: "居民能源使用乘数"
  fossil_pp_energy_generation_modifier: "§Y化石燃料发电厂§!发电"
  fossil_pp_fuel_consumption_modifier: "§Y化石燃料发电厂§!燃料消耗"
@@ -2092,15 +2092,15 @@
  offices_worker_requirement_modifier: "办公园区劳动力需求"
  buildings_worker_requirement_cmodifier: "所有建筑物劳动力需求"
  productivity_growth_modifier: "每月生产率增长"
- civilian_factories_productivity: "民用工厂生产率"
- military_factories_productivity: "军用工厂生产率"
- dockyard_productivity: "海军船坞生产率"
- offices_productivity: "办公园区生产率"
+ civilian_factories_productivity: "§Y民用工厂§!生产率"
+ military_factories_productivity: "§Y军用工厂§!生产率"
+ dockyard_productivity: "§Y海军船坞§!生产率"
+ offices_productivity: "§Y办公园区§!生产率"
  agricolture_productivity_modifier: "农业生产率"
  high_unemployment_threshold_modifier: "最高失业阈值"
  resource_sector_workers_modifier: "资源开采所需的工人"
  gdp_from_resource_sector_modifier: "资源部门GDP产出"
- agriculture_workers_modifier: "农业所需的工人"
+ agriculture_workers_modifier: "§Y自给农业§!所需的工人"
  modifier_experience_gain_heavy_frigate_training_factor: "£experience_neutral_training_texticon 重护卫舰经验增长"
  modifier_experience_gain_heavy_frigate_combat_factor: "£experience_neutral_combat_texticon 重护卫舰经验增长"
  modifier_experience_gain_patrol_boat_training_factor: "£experience_neutral_training_texticon 巡逻艇经验增长"
@@ -2157,3 +2157,6 @@
  CAT_ai_research: "£research_bonus_texticon 人工智能技术"
  CAT_3d: "£research_bonus_texticon 3D打印技术"
  CAT_satellite: "£research_bonus_texticon 卫星技术"
+ modifier_production_speed_agriculture_district_factor: "£construction_speed_texticon §Y$agriculture_district$§!建造速度"
+ agriculture_district_worker_requirement_modifier: "§Y商业化农业区§!所需工人"
+ agriculture_district_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$agriculture_district$§!税收乘数"
