--- a/localisation/french/MD_subideology_parties_l_french.yml
+++ b/localisation/french/MD_subideology_parties_l_french.yml
@@ -2971,7 +2971,7 @@
  SWE.Nat_Fascism_desc: ""
  SWE.Nat_Autocracy: "£generic_Nat_Autocracy_small Försvarsmakten"
  SWE.Monarchist: "£SWE_House_of_Bernadotte House of Bernadotte"
- SWE.Nat_Monarchist_icon: "SWE_House_of_Bernadotte"
+ SWE.Nat_Monarchist_icon: "£SWE_House_of_Bernadotte"
  IND.conservatism: "£IND_conservative National Awakening Party"
  IND.conservatism_icon: "£IND_conservative"
  IND.conservatism_desc: ""
