--- a/localisation/french/MD_subideology_parties_l_french.yml
+++ b/localisation/french/MD_subideology_parties_l_french.yml
@@ -5459,7 +5459,7 @@
  ISR.liberalism_alt6_icon: "£ISR_liberalism_alt6"
  ISR.socialism: "£ISR_socialism Labor Party"
  ISR.socialism_desc: ""
- ISR.socialism_icon: "£GFX_ISR_socialism"
+ ISR.socialism_icon: "£ISR_socialism"
  ISR.Western_Autocracy: "£ISR_Western_Autocracy The Jewish Home-New Right"
  ISR.Western_Autocracy_desc: ""
  ISR.Western_Autocracy_icon: "£ISR_Western_Autocracy"
@@ -5954,7 +5954,7 @@
  LEB.Nat_Autocracy_icon: "£LEB_military_junta"
  LEB.Nat_Populism: "£LEB_fascism Syrian Social Nationalist Party (Lebanon)"
  LEB.Nat_Populism_desc: ""
- LEB.Nat_Populism_icon: "£LEB_right_wing_populism"
+ LEB.Nat_Populism_icon: "£LEB_fascism"
  LEB.Nat_Fascism: "£IRQ_Nat_Autocracy_small Socialist Arab Lebanon Vanguard Party"
  LEB.Nat_Fascism_desc: ""
  LEB.Nat_Fascism_icon: "£IRQ_Nat_Autocracy_small"
