--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -69,6 +69,12 @@
  australia_md.16.t: "Crocodile Hunter Is Killed In Stingray Accident"
  australia_md.16.d: "Australian zookeeper, conservationist, and television programmer Steve Irwin was killed by a stingray while filming in the Great Barrier Reef. The stingray's barb pierced his chest, penetrating his thoracic wall and heart, causing massive trauma. He was at Batt Reef, near Port Douglas, Queensland, taking part in the production of an underwater documentary Ocean's Deadliest. Irwin captured the bravery of the Australian spirit and his death has devastated many as he has left us this gloomy morning."
  australia_md.16.o1: "The nation mourns"
+ australia_md.17.t: "Australia's New Infantry Fighting Vehicle"
+ australia_md.17.d: ""
+ australia_md.17.o1: "The Koreans make great machinery"
+ australia_md.17.o2: "Sweden for the win"
+ australia_md.17.o3: "How else would the British keep their empire?"
+ australia_md.17.o4: "German engineering is the best"
 
 #Tooltips
  CHI_influece_greater_influ_20_tt: "Our influence on Australia is greater than 20 (Current: [?THIS.AST_CHI_trade_influence])"
@@ -815,14 +821,54 @@
  AST_Demand_Demobilisation_desc: ""
  AST_Royal_Australian_Army: ""
  AST_Royal_Australian_Army_desc: ""
- AST_ADF: "ADF"
- AST_ADF_desc: ""
- AST_RAAF: "RAAF"
- AST_RAAF_desc: ""
- AST_Land_400: "Land 400"
- AST_Land_400_desc: ""
  AST_A_stable_economy: ""
  AST_A_stable_economy_desc: ""
+#military
+ AST_ADF: "ADF"
+ AST_ADF_desc: ""
+ #army
+ AST_RAA_Modernization: "RAA Modernisation"
+ AST_RAA_Modernization_desc: ""
+ AST_Land_400: "Land 400"
+ AST_Land_400_desc: ""
+ AST_Land_8116: "Land 8116"
+ AST_Land_8116_desc: ""
+ AST_ASNine_Hunstman: "AS9 Huntsman"
+ AST_ASNine_Hunstman_desc: ""
+ AST_MTenNinetyFive: "M1095"
+ AST_MTenNinetyFive_desc: ""
+ AST_The_MBT_Dilemma: "The MBT Dilemma"
+ AST_The_MBT_Dilemma_desc: ""
+ AST_Purchase_The_MOneAOne_AIM: "Purchase The M1A1 AIM"
+ AST_Purchase_The_MOneAOne_AIM_desc: ""
+ AST_The_Australian_Paladins: "The Australian Paladins"
+ AST_The_Australian_Paladins_desc: ""
+ AST_Invest_In_The_MOneATwo_SEP: "Invest In The M1A2 SEP"
+ AST_Invest_In_The_MOneATwo_SEP_desc: ""
+ AST_Enter_The_NGCV_Programme: "Enter the NGCV Programme"
+ AST_Enter_The_NGCV_Programme_desc: ""
+ AST_Join_The_AbramsX_Programme: "Join The AbramsX Programme"
+ AST_Join_The_AbramsX_Programme_desc: ""
+ AST_Join_The_ERCA_Programme: "Join the ERCA Programme"
+ AST_Join_The_ERCA_Programme_desc: ""
+ AST_Purchasing_The_Leopard_TwoAFour: "Purchasing The Leopard 2A4"
+ AST_Purchasing_The_Leopard_TwoAFour_desc: ""
+ AST_Co-operate_With_Rheinmetall: "Co-operate With Rheinmetall"
+ AST_Co-operate_With_Rheinmetall_desc: ""
+ AST_Lessons_From_KMW: "Lesson From KMW"
+ AST_Lessons_From_KMW_desc: ""
+ AST_Land_4503: "Land 4503"
+ AST_Land_4503_desc: ""
+ AST_AH-SixtyFourE_Apache_Guardian: "AH-64E Apache Guardian"
+ AST_AH-SixtyFourE_Apache_Guardian_desc: ""
+ AST_AH-OneZ_Viper: "AH-1Z Viper"
+ AST_AH-OneZ_Viper_desc: ""
+ AST_Upgrade_The_Eurocopters: "Upgrade The Eurocopters"
+ AST_Upgrade_The_Eurocopters_desc: ""
+ AST_In-House_Manufacturing: "In-House Manufacturing"
+ AST_In-House_Manufacturing_desc: ""
+ AST_Expand_Airbus_Australia: "Expand Airbus Australia"
+ AST_Expand_Airbus_Australia_desc: ""
  #navy
  AST_RAN: "RAN"
  AST_RAN_desc: ""
@@ -866,4 +912,7 @@
  AST_purchase_aegis_systems_desc: ""
  AST_hobart_class: "Hobart Class"
  AST_hobart_class_desc: ""
+ #airforce
+ AST_RAAF: "RAAF"
+ AST_RAAF_desc: ""
  #END
