--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -1035,7 +1035,8 @@
  Serbia.7.d: "WIP"
  Serbia.7.a: "The farmers could use more help than anyone right now"
  Serbia.7.b: "We can't ignore our most concentrated populations"
- Serbia.8.d: "WIP"
+ Serbia.8.t: "Cyanide Spills in Danube"
+ Serbia.8.d: "A cyanide spill near Baia Mare, Romania, by the gold mining company Aurul has polluted the Someș, Tisza, and Danube rivers. This disaster is killing large numbers of fish in Hungary, Serbia, and Romania, and is now being called the worst environmental disaster in Europe since Chornobyl."
  Serbia.8.a: "Blame foreign resource extracting companies"
  Serbia.8.b: "Cooperate a cleanup with Romania"
  Serbia.9.d: ""
