Rework of bundeswehr
-New variants and reworked old variants -new GFX
-library models attached to variants
-New Fuchs model
-Bugfix to existing code

--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -1994,16 +1994,16 @@
  GER_IFV_8_short: "Cougar KF-73"
  GER_IFV_8_desc: "The Cougar KF-73 is the future design of IFV's. The Cougar is an upgraded and larger design based off the Lynx KF-41. The Cougar features a larger and more armoured chassis and armoured with ERA (Explosive Reactive Armour). The Cougar is also fitted with an 82mm cannon, 40mm Autocannon, coaxial MG4 and fitted with ATGM's. As well as being highly offensive, the Cougar is extremely defensive and well-protected by next-gen active protection system. "
 
- GER_Anti_tank_0: "Panzerfaust 2"
- GER_Anti_tank_0_desc: "The PzF 2 (Panzerfaust 2) was a West German portable recoilless shoulder-fired anti-tank rocket launcher with a barrel-caliber of 44 mm (1.7 in). It was the spiritual successor to the Panzerfaust from World War II and served with the West German Army from the early 1960s to the early 1990s."
- GER_Anti_tank_1: "Panzerfaust 3"
- GER_Anti_tank_1_desc: "The Panzerfaust 3 is a modern semi-disposable recoilless anti-tank weapon, which was developed between 1978 and 1985 and first entered service with the Bundeswehr in 1987. It was ordered to provide West German infantry with an effective weapon against contemporary Soviet armor, thereby replacing West Germany's aging PzF 44 Light Lanze launchers."
- GER_Anti_tank_2: "MILAN 2"
- GER_Anti_tank_2_desc: "Missile d'Infanterie Léger 2 or MILAN 2 is a Franco-West German anti-tank guided missile system. It is a wire-guided semi-automatic command to line of sight (SACLOS) missile, which means the sight of the launch unit must be aimed at a target to guide the missile. The MILAN 2 can be equipped with a MIRA or MILIS thermal sight to give it night-firing ability. The MILAN 2 variant has a Single, main shaped charge warhead, with standoff probe to increase penetration."
- GER_Anti_tank_3: "RGW90 MATADOR"
- GER_Anti_tank_3_desc: "The MATADOR is a 90-millimeter (3.5 in) man-portable, disposable anti-armour and anti-brickwall weapon system developed by Germany, Israel and Singapore. It is an updated version of the German-Singaporean Armbrust design, and operates on the same principles."
- GER_Anti_tank_4: "Spike-ER"
- GER_Anti_tank_4_desc: "The Spike is a fire-and-forget anti-tank guided missile and anti-personnel missile with a tandem-charge high-explosive anti-tank (HEAT) warhead produced by Eurospike GmBh. The 'ER' model is an extended range version of the Spike model, reaching ranges up to 8000m (5.0mi) away. The improved tandem-charge high-explosive anti-tank (HEAT) warhead allows for armour penetration up to 1,000mm (39 in) thick."
+ 
+ GER_Anti_tank_0: "Panzerfaust 3"
+ GER_Anti_tank_0_desc: "The Panzerfaust 3 is a modern semi-disposable recoilless anti-tank weapon, which was developed between 1978 and 1985 and first entered service with the Bundeswehr in 1987. It was ordered to provide West German infantry with an effective weapon against contemporary Soviet armor, thereby replacing West Germany's aging PzF 44 Light Lanze launchers."
+ GER_Anti_tank_1: "MILAN"
+ GER_Anti_tank_1_short: "MILAN"
+ GER_Anti_tank_2: "MELLS Spike-LR"
+ GER_Anti_tank_2_short: "MELLS Spike-LR"
+ GER_Anti_tank_3: "MAC"
+ GER_Anti_tank_3_short: "MAC"
+ GER_Anti_tank_4: "MAC II"
 
  GER_Heavy_Anti_tank_0: "Raketenjagdpanzer 1"
  GER_Heavy_Anti_tank_0_desc: "The Raketenjagdpanzer 1 is an anti-tank guided missile-armed tank destroyer.  It was built on the chassis of the Hispano-Suiza HS.30, which was also used on the Schützenpanzer SPz 12-3. Only one of the missile launchers is visible from the outside at any time, however, as the other is retracted into the hull to be reloaded when the first is ready to fire."
