--- a/localisation/french/equipment_l_french.yml
+++ b/localisation/french/equipment_l_french.yml
@@ -1723,16 +1723,16 @@
  GER_IFV_8: "Schützenpanzer Cougar KF-73"
  GER_IFV_8_short: "Cougar KF-73"
  GER_IFV_8_desc: "Le Cougar KF-73 est le futur modèle de VCI. Le Cougar est une conception améliorée et plus grande basée sur le Lynx KF-41. Le Cougar est doté d'un châssis plus grand et plus blindé et blindé d'ERA (Explosive Reactive Armour). Le Cougar est également équipé d'un canon de 82 mm, d'un canon automatique de 40 mm, d'un MG4 coaxial et équipé d'ATGM. En plus d'être très offensif, le Cougar est extrêmement défensif et bien protégé par un système de protection active de nouvelle génération."
- GER_Anti_tank_0: "Panzerfaust 2"
- GER_Anti_tank_0_desc: "Le PzF 2 (Panzerfaust 2) était un lance-roquettes antichar portable sans recul ouest-allemand, à tir d'épaule, avec un calibre de canon de 44 mm (1,7 po). C'était le successeur spirituel du Panzerfaust de la Seconde Guerre mondiale et a servi dans l'armée ouest-allemande du début des années 1960 au début des années 1990"
- GER_Anti_tank_1: "Panzerfaust 3"
- GER_Anti_tank_1_desc: "Le Panzerfaust 3 est une arme antichar sans recul semi-jetable moderne, développée entre 1978 et 1985 et entrée en service dans la Bundeswehr en 1987. Elle a été commandée pour fournir à l'infanterie ouest-allemande une arme efficace contre les blindés soviétiques contemporains, remplaçant les lanceurs vieillissants PzF 44 Light Lanze d'Allemagne de l'Ouest."
- GER_Anti_tank_2: "MILAN 2"
- GER_Anti_tank_2_desc: "Le missile d'infanterie Léger 2 ou MILAN 2 est un système de missile guidé antichar franco-ouest-allemand. Il s'agit d'un missile à commande en ligne de visée semi-automatique filoguidé (SACLOS), ce qui signifie que la visée de l'unité de lancement doit être dirigée vers une cible pour guider le missile. Le MILAN 2 peut être équipé d'un viseur thermique MIRA ou MILIS pour lui donner une capacité de tir de nuit. La variante MILAN 2 est dotée d'une ogive principale à charge creuse unique, avec une sonde à distance pour augmenter la pénétration."
- GER_Anti_tank_3: "RGW90 MATADOR"
- GER_Anti_tank_3_desc: "Le MATADOR est un système d'arme anti-blindage et anti-mur de briques portable et jetable de 90 millimètres (3,5 pouces) développé par l'Allemagne, Israël et Singapour. Il s'agit d'une version mise à jour de la conception germano-singapourienne Armbrust et fonctionne sur les mêmes principes."
- GER_Anti_tank_4: "Spike-ER"
- GER_Anti_tank_4_desc: "Le Spike est un missile guidé antichar et un missile antipersonnel doté d'une ogive antichar hautement explosive (HEAT) à charge tandem produite par Eurospike GmBh. Le modèle « ER » est une version à portée étendue du modèle Spike, atteignant des portées allant jusqu'à 8 000 m (5,0 mi). L'ogive antichar hautement explosive (HEAT) améliorée à charge tandem permet une pénétration de blindage jusqu'à 1 000 mm (39 pouces) d'épaisseur."
+ 
+ GER_Anti_tank_0: "Panzerfaust 3"
+ GER_Anti_tank_0_desc: "Le Panzerfaust 3 est une arme antichar sans recul semi-jetable moderne, développée entre 1978 et 1985 et entrée en service dans la Bundeswehr en 1987. Elle a été commandée pour fournir à l'infanterie ouest-allemande une arme efficace contre les blindés soviétiques contemporains, remplaçant les lanceurs vieillissants PzF 44 Light Lanze d'Allemagne de l'Ouest."
+ GER_Anti_tank_1: "MILAN"
+ GER_Anti_tank_1_short: "MILAN"
+ GER_Anti_tank_2: "MELLS Spike-LR"
+ GER_Anti_tank_2_short: "MELLS Spike-LR"
+ GER_Anti_tank_3: "MAC"
+ GER_Anti_tank_3_short: "MAC"
+ GER_Anti_tank_4: "MAC II"
  GER_Heavy_Anti_tank_0: "Raketenjagdpanzer 1"
  GER_Heavy_Anti_tank_0_desc: "Le Raketenjagdpanzer 1 est un chasseur de chars antichar armé de missiles guidés. Il a été construit sur le châssis de l'Hispano-Suiza HS.30, qui était également utilisé sur le Schützenpanzer SPz 12-3. Cependant, un seul des lanceurs de missiles est visible de l'extérieur à tout moment, l'autre étant rétracté dans la coque pour être rechargé lorsque le premier est prêt à tirer."
  GER_Heavy_Anti_tank_1: "Raketenjagdpanzer 2"
