--- a/localisation/russian/equipment_l_russian.yml
+++ b/localisation/russian/equipment_l_russian.yml
@@ -2000,16 +2000,16 @@
  GER_IFV_8_short: "Cougar KF-73"
  GER_IFV_8_desc: "Cougar KF-73 - это будущая разработка в области БМП. Cougar - это модернизированная и более крупная машина, созданная на базе Lynx KF-41. Cougar имеет более мощное и бронированное шасси, оснащенное броней ERA (Explosive Reactive Armour). Cougar также оснащен 82-мм пушкой, 40-мм автопушкой, коаксиальным MG4 и системами ПТУР. Помимо высокой боевой эффективности, Cougar обладает отличной оборонительной мощью и хорошо защищен системой активной защиты нового поколения. "
 
- GER_Anti_tank_0: "Panzerfaust 2"
- GER_Anti_tank_0_desc: "PzF 2 (Panzerfaust 2) - западногерманская переносная безоткатная наплечная противотанковая ракетная установка с калибром ствола 44 мм (1,7 дюйма). Он стал духовным наследником Panzerfaust времен Второй мировой войны и состоял на вооружении западногерманской армии с начала 1960-х до начала 1990-х годов."
- GER_Anti_tank_1: "Panzerfaust 3"
- GER_Anti_tank_1_desc: "Panzerfaust 3 - современное полубронебойное безоткатное противотанковое оружие, разработанное в 1978-1985 гг. и впервые поступившее на вооружение бундесвера в 1987 году. Оно было заказано для того, чтобы обеспечить западногерманскую пехоту эффективным оружием против современной советской бронетехники и тем самым заменить устаревшие западногерманские пусковые установки PzF 44 Light Lanze."
- GER_Anti_tank_2: "MILAN 2"
- GER_Anti_tank_2_desc: "Missile d'Infanterie Léger 2 или MILAN 2 - франко-западногерманский противотанковый управляемый ракетный комплекс. Это полуавтоматическая ракета с проводным наведением по линии визирования (SACLOS), то есть прицел пусковой установки должен быть направлен на цель для наведения ракеты. Ракета MILAN 2 может быть оснащена тепловизионным прицелом MIRA или MILIS для ведения ночной стрельбы. Вариант MILAN 2 оснащен одиночной головной частью с кумулятивным зарядом и автономным зондом для повышения проникающей способности."
- GER_Anti_tank_3: "RGW90 MATADOR"
- GER_Anti_tank_3_desc: "MATADOR - 90-миллиметровый (3,5 дюйма) переносной одноразовый комплекс противотанкового и противокирпичного вооружения, разработанный Германией, Израилем и Сингапуром. Он представляет собой модернизированную версию германо-сингапурской системы Armbrust и работает на тех же принципах."
- GER_Anti_tank_4: "Spike-ER"
- GER_Anti_tank_4_desc: "Spike - управляемая противотанковая и противопехотная ракета с тандемным зарядом фугасной противотанковой боевой части (ВПЧ), выпускаемая компанией Eurospike GmBh. Модель "ER" является версией модели Spike с увеличенной дальностью стрельбы, достигающей 8000 м (5,0 миль). Усовершенствованный тандемный заряд фугасной противотанковой боеголовки (HEAT) позволяет пробивать броню толщиной до 1000 мм (39 дюймов)."
+ 
+ GER_Anti_tank_0: "Panzerfaust 3"
+ GER_Anti_tank_0_desc: "Panzerfaust 3 - современное полубронебойное безоткатное противотанковое оружие, разработанное в 1978-1985 гг. и впервые поступившее на вооружение бундесвера в 1987 году. Оно было заказано для того, чтобы обеспечить западногерманскую пехоту эффективным оружием против современной советской бронетехники и тем самым заменить устаревшие западногерманские пусковые установки PzF 44 Light Lanze."
+ GER_Anti_tank_1: "MILAN"
+ GER_Anti_tank_1_short: "MILAN"
+ GER_Anti_tank_2: "MELLS Spike-LR"
+ GER_Anti_tank_2_short: "MELLS Spike-LR"
+ GER_Anti_tank_3: "MAC"
+ GER_Anti_tank_3_short: "MAC"
+ GER_Anti_tank_4: "MAC II"
 
  GER_Heavy_Anti_tank_0: "Raketenjagdpanzer 1"
  GER_Heavy_Anti_tank_0_desc: "Raketenjagdpanzer 1 - танковый эсминец с противотанковым управляемым ракетным вооружением.  Он был построен на шасси Hispano-Suiza HS.30, которое также использовалось на Schützenpanzer SPz 12-3. Однако снаружи в любой момент времени видна только одна из пусковых установок, так как вторая убирается в корпус для перезарядки, когда первая готова к стрельбе."
